<resources>
    <string name="app_name">Ежедневная очистка</string>
    <string name="request_access">Разрешить доступ ко всем файлам</string>
    <string name="schedule_daily">Ежедневная очистка</string>
    <string name="clean_now">Очистить сейчас</string>
    <string name="last_result">Последний результат: %1$s</string>
    <string name="what_to_clean">Что очищать</string>
    <string name="opt_thumbs">Миниатюры (.thumbnails)</string>
    <string name="opt_download">Временные файлы в Download</string>
    <string name="opt_data">Кеши в Android/data</string>
    <string name="opt_media">Кеши в Android/media</string>
    <string name="opt_app">Кеш приложения</string>
    <string name="open_log">Журнал</string>
    <string name="interval_6h">Каждые 6 часов</string>
    <string name="interval_12h">Каждые 12 часов</string>
    <string name="interval_1d">Раз в день</string>
    <string name="interval_3d">Раз в 3 дня</string>
    <string name="interval_7d">Раз в неделю</string>
    <string name="interval_label">Интервал</string>
    <string name="pick_android_data">Выбрать Android/data</string>
    <string name="pick_android_media">Выбрать Android/media</string>
    <string name="auto_clean_label">Автоочистка</string>
    <string name="onb_title">Необходимые разрешения</string>
    <string name="onb_notif">Разрешить уведомления</string>
    <string name="onb_all_files">Полный доступ к файлам</string>
    <string name="onb_open_settings">Открыть настройки</string>
    <string name="onb_grant">Выдать</string>
    <string name="onb_done">Готово</string>
    <string name="onb_data">Подключить Android/data</string>
    <string name="onb_media">Подключить Android/media</string>
    <string name="onb_not_needed">Не требуется на этой версии Android</string>
</resources>
