<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">
    <Button
        android:id="@+id/btnPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_access"/>
    <Switch
        android:id="@+id/switchSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/schedule_daily"/>
    <Button
        android:id="@+id/btnClean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/clean_now"/>
    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/last_result"/>
</LinearLayout>
